--- a/settings.html
+++ b/settings.html
@@ -99,6 +99,11 @@
       <td>Timeout in seconds</td>
     </tr>
     <tr>
+      <td><input type="checkbox" id="timeoutReset0"></td>
+      <td><input type="checkbox" id="timeoutReset1"></td>
+      <td>Reset after timeout</td>
+    </tr>
+    <tr>
       <td><input type="text" id="prefix0"></td>
       <td><input type="text" id="prefix1"></td>
       <td>Prefix</td>
