--- a/client/download.html
+++ b/client/download.html
@@ -17,7 +17,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/res/jquery-1.11.1.js"></script>
-  <script src="/config.js"></script>
+  <script src="/current.js"></script>
   <script type="text/javascript">
     var fileList;
     var socket = io();
