--- a/client/fileSettings.html
+++ b/client/fileSettings.html
@@ -27,7 +27,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/res/jquery-1.11.1.js"></script>
-  <script src="/config.js"></script>
+  <script src="/current.js"></script>
   <script src="/config.static.js"></script>
   <script type="text/javascript">
     if (screen.width>1000){
