--- a/client/fileUpload.html
+++ b/client/fileUpload.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-  <title>MBDCcomUnit</title>
    <style>
       *{font-size: 25px; padding:0; margin: 0;}
       table { text-align: center; border: none; border-collapse: collapse;}
@@ -21,6 +20,7 @@
   <script src="/res/jquery-1.11.1.js"></script>
   <script src="/current.js"></script>
   <script type="text/javascript">
+    document.title = constants.name;
     var columnWidths = [10, 20, 60, 10]
     const numColumns = 4;
     const numRows = 11;
