--- a/client/settings.html
+++ b/client/settings.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-  <title>MBDCcomUnit</title>
    <style>
       table {text-align: center; border: none; border-collapse: collapse;}
       tr { height: 40px; }
@@ -17,6 +16,11 @@
       <td><h2>Settings com 1</h2></td>
       <td><b>Test Mode</b><input type="checkbox" id="serialtestMode"></td>
     </tr>
+    <tr>
+        <td><input type="text" id="serialcoms0testMessage"></td>
+        <td><input type="text" id="serialcoms1testMessage"></td>
+        <td>Test value</td>
+      </tr>
     <tr>
       <td><input type="number" id="serialcoms0baudRate" min="0" step="1"></td>
       <td><input type="number" id="serialcoms1baudRate" min="0" step="1"></td>
@@ -184,7 +188,7 @@
     }
 
     fillIn();
-
+    document.title = constants.name;
     var socket = io();
 
     function setDate(){
