--- a/client/settings.html
+++ b/client/settings.html
@@ -133,6 +133,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="/res/jquery-1.11.1.js"></script>
   <script src="/current.js"></script>
+  <script src="/config.static.js"></script>
   <script type="text/javascript">
     function fillInRecursive(prefix, config){
       for (let property in config){
